--- a/src/Language/en/en.json
+++ b/src/Language/en/en.json
@@ -5,7 +5,7 @@
     "searchCar ": "Cars",
     "searchCloths ": "Cloths",
     "searchElectronic ": "Electronic",
-    "searchInput": "Search product…",
+    "searchInput": "Search...",
     "FastDelivery": "Fast Delivery",
     "StartFrom $10": "Start From $10",
     "MoneyGuarantee": "Money Guarantee",
